--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,29 @@ body{
   color: #fff;
 }
 
+.filter {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  
+}
+
+.filter > button {
+  background-color: #e0c521;
+  border: none;
+  font-size: 18px;
+  border-radius: 5px;
+  padding: 2px 10px;
+  cursor: pointer;
+  transition: all 500ms ease;
+  
+}
+.filter > button:hover {
+  background-color: #9b8a1a;
+  
+  
+}
+
 .cards__container{
   display: flex;
   flex-wrap: wrap;
@@ -12,3 +35,4 @@ body{
 .heading{
   text-align: center;
 }
+
