--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -1,7 +1,131 @@
-.cart__container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 12px;
-  margin: 5px 15px;
+.cart {
+  display: none;
+  width: 100%;
+  height: 600px;
+  overflow-y: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
 }
+
+.cart.open {
+  display: block;
+  
+}
+
+.cart-content {
+  text-align: center;
+  margin-bottom: 20px;
+  
+}
+
+.cart-content h2 {
+  color: black;
+}
+
+/* Стили для кнопки закрытия корзины */
+
+
+.cart-item {
+  color: black;
+  margin-bottom: 10px;
+  border-bottom: 2px solid black;
+}
+
+.cart_item_content {
+  position: relative;
+  display: flex;
+  padding: 10px 10px;
+}
+
+.cart_item_content img {
+  width: 100px;
+}
+.item_content_text {
+  display: flex;
+}
+
+.item_content_price {
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  text-align: left;
+}
+
+.quantity_container {
+  display: flex;
+  gap: 10px;
+}
+.item_title {
+  position: absolute;
+  top: 0;
+  left: 30%;
+}
+.quantity {
+  margin: 0;
+  padding: 0;
+}
+
+.price {
+  margin: 0;
+  padding: 0;
+}
+
+
+.summa {
+  color: black;
+}
+
+.remove_item {
+  position: absolute;
+  bottom: 10%;
+  right: 5%;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.add_item {
+  cursor: pointer;
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+.btn_close {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.btn_close:hover {
+  background-color: #0056b3;
+  color: red;
+}
+.btn_pay {
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+  
