--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -3,21 +3,22 @@
 }
 
 .card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 150px;
-  height: 250px;
+  position: relative;
+  width: 100px;
+  height: 230px;
   border: 2px solid var(--primary-color);
   padding: 0.5rem 0.3rem;
-  margin: 13px 10px;
+  margin: 20px 10px;
   position: relative;
   border-radius: 5px;
 }
 
+
+
 .card__title {
   font-weight: 400;
   text-align: center;
+  
 }
 
 .card__title .card__price {
@@ -32,14 +33,11 @@
 
 .image__container img {
   width: 100%;
+  margin-top: 15px;
   object-fit: cover;
 }
 
-.btn-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
+
 
 .card__price {
   text-align: center;
@@ -48,20 +46,18 @@
 
 .card__badge {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -5px;
+  right: -5px;
   width: 40px;
   height: 40px;
-  background-color: rgb(227, 112, 30);
   border-radius: 50%;
-  transform: translate(20px, -20px) scale(1);
   color: #fff;
   font-weight: bold;
   text-align: center;
-  border: 2px solid rgb(227, 112, 30);
   font-size: 20px;
   display: flex;
   justify-content: center;
+  margin: 0 auto;
   align-items: center;
   transition: all 0.3s ease;
   opacity: 0.8;
@@ -71,4 +67,13 @@
 
 .card__badge--hidden {
   display: none;
+}
+
+
+@media (min-width: 370px) {
+  .card {
+    width: 150px; /* Изменяем ширину на 150px при ширине экрана больше 330px */
+  }
+  
+
 }
