--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -46,21 +46,22 @@
 
 .card__badge {
   position: absolute;
-  top: -5px;
-  right: -5px;
+  top: 0;
+  right: 0;
   width: 40px;
   height: 40px;
+  background-color: rgb(227, 112, 30);
   border-radius: 50%;
+  transform: translate(20px, -20px) scale(1);
   color: #fff;
   font-weight: bold;
   text-align: center;
+  border: 2px solid rgb(227, 112, 30);
   font-size: 20px;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
   align-items: center;
-  transition: all 0.3s ease;
-  opacity: 0.8;
+
 }
 
 
