--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -3,9 +3,12 @@
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   position: relative;
   width: 100px;
-  height: 230px;
+  height: 250px;
   border: 2px solid var(--primary-color);
   padding: 0.5rem 0.3rem;
   margin: 20px 10px;
@@ -18,11 +21,16 @@
 .card__title {
   font-weight: 400;
   text-align: center;
+  justify-content: center;
+  margin: 15px auto 0;
   
 }
 
-.card__title .card__price {
+.card__price {
+  width: 100%;
   font-weight: bold;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .image__container {
@@ -68,6 +76,7 @@
 
 .card__badge--hidden {
   display: none;
+
 }
 
 
