--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -41,6 +41,8 @@
 .cart_item_content {
   position: relative;
   display: flex;
+  justify-content: flex-start;
+  gap: 20px;
   padding: 10px 10px;
 }
 
@@ -49,23 +51,25 @@
 }
 .item_content_text {
   display: flex;
-}
-
-.item_content_price {
-  position: absolute;
-  top: 50%;
-  left: 30%;
+  flex-direction: column;
   text-align: left;
 }
 
+.item_content_price {
+  margin: 0;
+  padding: 0;
+}
+
 .quantity_container {
+  width: 100%;
+  height: max-content;
   display: flex;
   gap: 10px;
+  margin: 5px 0 0 0;
 }
 .item_title {
-  position: absolute;
-  top: 0;
-  left: 30%;
+  margin: 0;
+  padding: 0;
 }
 .quantity {
   margin: 0;
@@ -73,7 +77,7 @@
 }
 
 .price {
-  margin: 0;
+  margin: 10px 0 0 0;
   padding: 0;
 }
 
@@ -127,4 +131,20 @@
   border-radius: 4px;
   cursor: pointer;
 }
-  
+
+@media (max-width: 380px) {
+  .cart_item_content img {
+    width: 80px;
+    object-fit: contain;
+  }
+  .remove_item {
+    position: absolute;
+    font-size: 10px;
+    width: max-content;
+    bottom: 5px;
+    left: 10px;
+  }
+  .item_content_text {
+    font-size: 14px;
+  }
+}
