--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -147,4 +147,11 @@
   .item_content_text {
     font-size: 14px;
   }
+  .add_item {
+    padding: 2px 6px;
+  }
+  .quantity_container {
+    gap: 5px;
+    
+  }
 }
