--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body{
 }
 
 .filter {
+  
   display: flex;
   flex-wrap: wrap;
   width: 100%;
@@ -13,6 +14,14 @@ body{
   justify-content: center;
   gap: 5px;
   margin: 10px 0 0;
+}
+
+.filter.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10; /* Позволяет фильтру быть выше остального контента */
+  /* Добавьте любые другие стили для фильтра при фиксированной позиции */
 }
 
 .filter > button {
@@ -35,6 +44,7 @@ body{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 50px;
 }
 
 .heading{
