--- a/src/Components/Button/ButtonOrder.css
+++ b/src/Components/Button/ButtonOrder.css
@@ -3,10 +3,11 @@
     bottom: 0;
     background-color: rgb(38, 121, 38);
     width: 100%;
+    height: 50px;
     color: #fff;
-    font-size: 14px;
+    font-size: 18px;
     cursor: pointer;
-    border: none;
+    border: 2px solid rgb(9, 9, 102);
     border-radius: 5px;
     padding: 8px 10px;
     opacity: 1;
