--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -1,7 +1,7 @@
 .cart {
   display: none;
   width: 100%;
-  height: 600px;
+  height: 100vh;
   overflow-y: auto;
   position: fixed;
   top: 50%;
@@ -20,6 +20,8 @@
 }
 
 .cart-content {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   margin-bottom: 20px;
   
@@ -62,7 +64,7 @@
 
 .quantity_container {
   width: 100%;
-  height: max-content;
+  height: 26px;
   display: flex;
   gap: 10px;
   margin: 5px 0 0 0;
@@ -123,7 +125,7 @@
   color: red;
 }
 .btn_pay {
-  margin-top: 10px;
+  margin: 10px 10px;
   padding: 10px 20px;
   background-color: #007bff;
   color: white;
