--- a/src/Components/Button/ButtonOrder.css
+++ b/src/Components/Button/ButtonOrder.css
@@ -7,7 +7,7 @@
     color: #fff;
     font-size: 18px;
     cursor: pointer;
-    border: 2px solid red;
+    border: 2px solid black;
     border-radius: 5px;
     padding: 8px 10px;
     opacity: 1;
