--- a/src/Components/Button/ButtonOrder.css
+++ b/src/Components/Button/ButtonOrder.css
@@ -1,7 +1,7 @@
 .buttonOrder {
     position: fixed;
     bottom: 0;
-    background-color: rgb(38, 121, 38);
+    background-color: rgb(120,120,120);
     width: 100%;
     height: 50px;
     color: #fff;
