--- a/src/Components/Button/ButtonOrder.css
+++ b/src/Components/Button/ButtonOrder.css
@@ -1,13 +1,13 @@
 .buttonOrder {
     position: fixed;
     bottom: 0;
-    background-color: rgb(120,120,120);
+    background-color: rgb(38, 121, 38);
     width: 100%;
     height: 50px;
     color: #fff;
     font-size: 18px;
     cursor: pointer;
-    border: 2px solid black;
+    border: 2px solid rgb(120,120,120);
     border-radius: 5px;
     padding: 8px 10px;
     opacity: 1;
