--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,32 @@
 body{
   background-color: rgb(19, 19, 52);
   color: #fff;
-  min-width: 300px;
-  
+
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 
 .filter {
-  
+  height: max-content;
+  background-color: rgb(112, 112, 112, 0.5);
+  border-radius: 5px;
+}
+
+.filter_content {
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
-  height: max-content;
   justify-content: center;
   gap: 5px;
-  margin: 10px 0 0;
+  padding: 5px;
+  
 }
-
-.filter.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 10; /* Позволяет фильтру быть выше остального контента */
-  /* Добавьте любые другие стили для фильтра при фиксированной позиции */
-}
-
-.filter > button {
+.filter_content button {
   background-color: #e0c521;
   border: none;
   font-size: 18px;
@@ -32,19 +34,27 @@ body{
   padding: 2px 10px;
   cursor: pointer;
   transition: all 500ms ease;
-  
 }
-.filter > button:hover {
-  background-color: #9b8a1a;
-  
+.filter.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10; 
   
 }
 
+
+.filter_content > button:hover {
+  background-color: #9b8a1a;
+}
+
 .cards__container{
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   padding-bottom: 50px;
+  
 }
 
 .heading{
