--- a/src/Components/Button/ButtonOrder.css
+++ b/src/Components/Button/ButtonOrder.css
@@ -1,15 +1,16 @@
 .buttonOrder {
     position: fixed;
     bottom: 0;
+    left: 1px;
     background-color: rgb(38, 121, 38);
-    width: 100%;
+    width: 99%;
     height: 50px;
     color: #fff;
     font-size: 18px;
     cursor: pointer;
-    border: 2px solid rgb(9, 9, 102);
+    margin: 0 0 4px;
+    border: 2px groove rgb(120, 120, 120);
     border-radius: 5px;
-    padding: 8px 10px;
     opacity: 1;
     z-index: 10;
     transition: all 500ms ease;
@@ -27,3 +28,11 @@
     margin: 5px 15px;
     gap: 10px;
   }
+
+.summa_order {
+    font-weight: 600;
+    font-size: 18px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 5px 10px;
+}
