--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -30,11 +30,8 @@
 
 .cart-content h2 {
   color: black;
-  
+  margin: 10px 0;
 }
-
-/* Стили для кнопки закрытия корзины */
-
 
 .cart-item {
   color: black;
@@ -115,6 +112,7 @@
   border-radius: 5px;
 }
 
+
 .add_item {
   cursor: pointer;
   background-color: black;
@@ -124,11 +122,10 @@
   border-radius: 5px;
 }
 .btn_close {
-  position: fixed;
-  top: 40px;
-  right: 30px;
+  width: 96%;
   padding: 10px 20px;
   background-color: #007bff;
+  margin: 0 auto;
   color: white;
   border: none;
   border-radius: 4px;
