--- a/src/Components/Button/ButtonOrder.css
+++ b/src/Components/Button/ButtonOrder.css
@@ -1,7 +1,7 @@
 .buttonOrder {
     position: fixed;
     bottom: 0;
-    left: 1px;
+    left: 0;
     background-color: rgb(38, 121, 38);
     width: 99%;
     height: 50px;
