--- a/src/App.css
+++ b/src/App.css
@@ -14,21 +14,24 @@ body{
 
 .filter {
   height: max-content;
-  background-color: rgb(112, 112, 112, 0.7);
+  background-color: rgb(112, 112, 112, 0.95);
   border-radius: 5px;
 }
 
 .filter_content {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  
+  width: 100%;
+  overflow-y: scroll;
+  
   gap: 5px;
-  padding: 5px;
+  padding: 5px 0 20px;
+  margin: 0;
   
 }
 .filter_content button {
   background-color: #e0c521;
-  border: none;
+  border: 1px solid rgb(227, 112, 30);
   font-size: 18px;
   border-radius: 5px;
   padding: 2px 10px;
