--- a/src/App.css
+++ b/src/App.css
@@ -13,30 +13,35 @@ body{
 }
 
 .filter {
+  width: 100%;
   height: max-content;
+  margin: 0 auto;
   background-color: rgb(112, 112, 112, 0.95);
   border-radius: 5px;
+  overflow:hidden;
 }
 
 .filter_content {
   display: flex;
-  
   width: 100%;
   overflow-x: scroll;
-  
   gap: 5px;
-  padding: 5px 0 20px;
-  margin: 0;
+  padding: 5px 20px 20px;
+  margin: 0 20px 0 0;
   
 }
 .filter_content button {
   background-color: #e0c521;
-  border: 1px solid rgb(227, 112, 30);
+  border: 1px solid rgb(126, 55, 4);
   font-size: 18px;
   border-radius: 5px;
   padding: 2px 10px;
   cursor: pointer;
   transition: all 500ms ease;
+}
+
+.filter_content button:last-child {
+  margin-right: 40px;
 }
 .filter.sticky {
   position: fixed;
