--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,12 @@ body{
 }
 
 .filter_content button:last-child {
+  width: 100px;
+  background: transparent;
   margin-right: 100px;
+  border: none;
+  color: transparent;
+  
 }
 .filter.sticky {
   position: fixed;
