--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,17 @@ body{
   background-color: #9b8a1a;
 }
 
+.loader-container {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	background: rgba(0, 0, 0, 0.834);
+	z-index: 1;
+}
+
+.loader-container--hidden {
+	display: none;
+}
